# learn_glfw

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  gears.c  learn.c
learn/: CMakeLists.txt  camera.c  camera.h  learn.c  learn2.c  learn3.c  learn4.c  shader.c  shader.h  texture2d.c  texture2d.h  utils.c  utils.h
learn/component/: image.c  image.h  transform.c  transform.h
learn/data/: mesh.c  mesh.h  model.c  model.h
learn/utils/: image_loader.c  image_loader.h
res/fish/: f_bzy.mtl  f_bzy.obj1
shaders/: 1.model_loading.fs  1.model_loading.vs  pos_col_frag.shader  pos_col_frag_img.shader  pos_col_vertex.shader  pos_col_vertex_img.shader
